<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/neutral"
    android:translationZ="1dp"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible"
            />

        <!--        <EditText-->
        <!--            android:id="@+id/editTextValue1"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="@dimen/LineHeight"-->
        <!--            android:ems="10"-->
        <!--            android:inputType="number|numberDecimal|numberSigned"-->
        <!--            />-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextValue1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/LineHeight"
            android:hint="@string/label"
            style="@style/CustomInput"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal|numberSigned"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextValue2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/LineHeight"
            android:hint="@string/label2"
            style="@style/CustomInput"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal|numberSigned"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!--        <EditText-->
        <!--            android:id="@+id/editTextValue2"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="@dimen/LineHeight"-->
        <!--            android:ems="10"-->
        <!--            android:inputType="number|numberDecimal|numberSigned" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/buttonPlus"
                style="@style/CustomButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:onClick="onButtonPlusClick"
                app:icon="@drawable/add_24"/>

            <Button
                android:id="@+id/buttonMinus"
                style="@style/CustomButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onButtonMinusClick"
                android:text="@string/minus"
                app:icon="@drawable/baseline_remove_24" />
            <Button
                android:id="@+id/buttonMul"
                style="@style/CustomButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/ply"
                android:onClick="onButtonMulClick"
                app:icon="@drawable/baseline_clear_24" />
            <Button
                android:id="@+id/buttonDiv"
                style="@style/CustomButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/div"
                android:onClick="onButtonDivClick"
                app:icon="@drawable/div_1"/>


        </LinearLayout>
        <TextView
            android:id="@+id/textViewOutput"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="3dp"
            android:text="@string/_initial_output"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitEnd"
            app:srcCompat="@drawable/tree3" />

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>